# roboracer-2025

./: .gitignore  Dockerfile  README.md  docker-compose.yml
f1tenth_ws/: LICENSE  my_map_save.pgm  my_map_save.yaml  my_map_serial.data
f1tenth_ws/src/f1tenth_planning/: setup.cfg  setup.py
f1tenth_ws/src/f1tenth_planning/config/: real.yaml  sim.yaml
f1tenth_ws/src/f1tenth_planning/f1tenth_planning/: occupancy_grid_planner.py  pure_pursuit_follower.py
f1tenth_ws/src/f1tenth_system/localization/: CMakeLists.txt  README.md  package.xml
f1tenth_ws/src/localization/: CMakeLists.txt  README.md  package.xml
f1tenth_ws/src/localization/launch/: mapping.launch.py
f1tenth_ws/src/localization/maps/: map_1761949489.yaml
f1tenth_ws/src/localization/scripts/: pose_relay.py  print_scan.py  test_setup.py
f1tenth_ws/src/planner_web_ui/: README.md  package.xml  setup.cfg  setup.py
f1tenth_ws/src/planner_web_ui/launch/: real_pathplanning.launch.py  sim_pathplanning.launch.py  web_ui.launch.py
f1tenth_ws/src/planner_web_ui/planner_web_ui/: __init__.py  web_server.py
f1tenth_ws/src/planner_web_ui/resource/: planner_web_ui
f1tenth_ws/src/planner_web_ui/static/: app.js  index.html  styles.css
f1tenth_ws/src/planner_web_ui/test/: test_web_server_helpers.py
f1tenth_ws/src/planning/: README.md  package.xml  setup.cfg  setup.py
f1tenth_ws/src/planning/launch/: planning.launch.py
scripts/: pathplanning_common.sh  pathplanning_real.sh  pathplanning_sim.sh
sim_ws/src/: f1tenth_planning  planner_web_ui  planning
sim_ws/src/f1tenth_gym_ros/: Dockerfile  README.md  package.xml  setup.cfg  setup.py
sim_ws/src/f1tenth_gym_ros/config/: sim.yaml
sim_ws/src/f1tenth_gym_ros/f1tenth_gym/: Dockerfile  README.md  pyproject.toml
sim_ws/src/f1tenth_gym_ros/f1tenth_gym/.github/workflows/: ci.yml  docker.yml  lint.yml
sim_ws/src/f1tenth_gym_ros/f1tenth_gym/examples/: random_trackgen.py  run_in_empty_track.py  video_recording.py  waypoint_follow.py
sim_ws/src/f1tenth_gym_ros/f1tenth_gym/f1tenth_gym/envs/: action.py  collision_models.py  env_config.py  f110_env.py  integrators.py  simulator.py  state.py
sim_ws/src/f1tenth_gym_ros/f1tenth_gym/f1tenth_gym/envs/dynamic_models/: __init__.py  kinematic.py  single_track.py
sim_ws/src/f1tenth_gym_ros/f1tenth_gym/f1tenth_gym/envs/dynamic_models/multi_body/: __init__.py  multi_body.py  tire_model.py
sim_ws/src/f1tenth_gym_ros/f1tenth_gym/f1tenth_gym/envs/lidar/: __init__.py  config.py  laser_models.py
sim_ws/src/f1tenth_gym_ros/f1tenth_gym/f1tenth_gym/envs/observation/: __init__.py  base.py  full.py
sim_ws/src/f1tenth_gym_ros/f1tenth_gym/f1tenth_gym/envs/rendering/: __init__.py  callbacks.py  mesh_renderer.py  pyqt_objects.py  pyqtgl_objects.py  renderer.py  rendering_pyqt.py  rendering_pyqtgl.py
sim_ws/src/f1tenth_gym_ros/f1tenth_gym/f1tenth_gym/envs/reset/: __init__.py  map_reset.py  masked_reset.py  utils.py
sim_ws/src/f1tenth_gym_ros/f1tenth_gym/f1tenth_gym/envs/track/: cubic_spline.py  raceline.py  track.py  utils.py
sim_ws/src/f1tenth_gym_ros/f1tenth_gym/tests/: legacy_scan_gen.py  test_action.py  test_cubic_spline.py  test_dynamics.py  test_env_config.py  test_f110_env.py  test_integrators.py  test_observation.py  test_renderer.py  test_scan_sim.py  test_state.py  test_track.py  test_utils.py
sim_ws/src/f1tenth_gym_ros/f1tenth_gym_ros/: gym_bridge.py
sim_ws/src/f1tenth_gym_ros/launch/: gym_bridge_launch.py
sim_ws/src/f1tenth_planning/: package.xml
src/f1tenth_system/intel_realsense_depth_camera/: package.xml  setup.cfg  setup.py
src/f1tenth_system/intel_realsense_depth_camera/launch/: intel_realsense_with_localization.launch.py
src/f1tenth_system/localization/: CMakeLists.txt
src/f1tenth_system/roboracer_follow_gap/: package.xml  setup.cfg  setup.py
(+21 files in other folders)
