<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>intel_realsense_depth_camera</name>
  <version>0.0.0</version>
  <description>Intel RealSense D435i integration package</description>
  <maintainer email="naowal.ar@gmail.com">curc</maintainer>
  <license>MIT</license>

  <depend>launch</depend>
  <depend>ros2launch</depend>
  <depend>realsense2_camera</depend>
  <depend>tf2_ros</depend>
  <depend>localization</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
